# python-pynterp

./: .gitignore  README.md  TODO.md  pynterp.py  pyproject.toml
.agents/skills/bump-version/agents/: openai.yaml
.agents/skills/capture-the-flag/: SKILL.md
.agents/skills/capture-the-flag/agents/: openai.yaml
.github/workflows/: ci.yml  release.yml
scripts/: cpython_pynterp_probe.py  ctf_release_loop.sh  todo_loop.sh
skills/bump-version/: SKILL.md
skills/capture-the-flag/: SKILL.md
skills/capture-the-flag/agents/: openai.yaml
src/pynterp/: __init__.py  __main__.py  code.py  common.py  core.py  expressions.py  functions.py  helpers.py  host_exec.py  interpreter.py  main.py  scopes.py  statements.py  symtable_utils.py
src/pynterp/lib/: __init__.py  builtins.py  compat.py  guards.py  membrane.py  module_loader.py  stdlib.py
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_core_semantics.py  test_cpython_pynterp_probe.py  test_env_strict.py  test_keyword_params.py  test_sandbox_security.py  test_sandbox_typealias_escape.py  test_super_semantics.py  test_www.py
tests/fixtures/: kitchen_sink.py
www/: Dockerfile  SETUP.md  app.py
www/templates/: index.html
