[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pynterp"
version = "0.1.0"
description = "AST-walk interpreter for a meaningful Python subset"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pynterp"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pynterp",
  "tests",
  "pyproject.toml",
  "README.md",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["F", "I"]
