[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pynterp"
version = "0.1.2"
description = "AST-walk interpreter for a meaningful Python subset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "flask>=3.1.2",
  "ipython>=8.38.0",
  "poethepoet>=0.41.0",
  "pytest>=8.4.0",
  "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pynterp"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pynterp",
  "tests",
  "pyproject.toml",
  "README.md",
]

[tool.uv]
default-groups = ["dev"]

[tool.poe.tasks.www]
help = "Run the local Flask UI for the CTF app"
cmd = "flask --app www.app run --debug --port 8080"
env = { PYTHONPATH = "src" }

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["F", "I"]
